导航栏框架

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 
 
     <!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
+	<script src="../static/js/html5shiv.js"></script>
 	<![endif]-->
 
 
@@ -47,10 +47,7 @@
     <!-- End of Splash Screen -->
 
 
-    <div id="wrapper">
-        <div class="page-overlay">
-        </div>
-
+    <div id="wrapper">     
         <!-- content begin -->
         <div id="content" class="no-bottom no-top">
 
@@ -77,7 +74,8 @@
                 <input type="text" class="form-control uname" name="userid" id="userId" placeholder="用户ID" />
                 <input type="password" class="form-control pword m-b" name="passwd" id="password"  placeholder="密码" />
                 <button class="btn btn-warning btn-block" type="submit">登 录</button>
-            </form>        
+            </form>    
+    
         </div>
     </div>
 </div>
