--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
         <div class="col-sm-12 ">
             <form method="post"  th:action="@{/login}"  id="frm">
                 <h1 style="text-align: center"> 教 参 管 理 系 统</h1>
-                <input type="text" class="form-control uname" name="userid" id="userId" placeholder="用户ID" />
+                <input type="text" class="form-control uname" name="userId" id="userId" placeholder="用户ID" />
                 <input type="password" class="form-control pword m-b" name="passwd" id="password"  placeholder="密码" />
                 <button class="btn btn-warning btn-block" type="submit">登 录</button>
             </form>    
