导航栏样式更改

--- a/src/main/resources/static/css/color.css
+++ b/src/main/resources/static/css/color.css
@@ -118,4 +118,5 @@ border-color: #ffa200 transparent; /*same colour as the lower of the bubble's gr
 .teal{color:#009999 !important;}
 .purple{color:#663366 !important;}
 .green{color:#009900 !important;}
+.black{color: #000000;}
 
