--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,12 +30,12 @@
     <div id="wrapper">
         <!-- header begin -->
      
-            <header  class="">
+            <header  class="smaller">
                 <div class="row">                                 
                         <!-- mainmenu begin -->
                         <nav  class="navbar" role="navigation" style="margin-bottom: 0">
-                            <ul id="mainmenu" class="navbar-left">
-                                <li><a class="J_menuItem" href="index.html">Home</a></li>
+                            <ul id="mainmenu" class="navbar-left" >
+                                <li><a class="J_menuItem black" href="index.html">Home</a></li>
                                  <li><a class="J_menuItem" href="MyThesis.html">My Thesis</a></li>
             <li><a class="J_menuItem" href="MySoftwareCopyright.html">My Software Copyright</a></li>
             <li><a class="J_menuItem" href="MyProject.html">My Project</a></li>
