--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -224,7 +224,7 @@ body {
 	padding: 50px 20px 50px 20px;
 	line-height: 35px;
 	text-decoration: none;
-	color:#eceff3;
+	color:#000000;
 	text-align:center;
 	outline:none;
 	}
