--- a/src/main/resources/templates/Management.html
+++ b/src/main/resources/templates/Management.html
@@ -30,7 +30,7 @@
     <div id="wrapper">
         <!-- header begin -->
      
-            <header  class="">
+            <header  class="smaller">
                 <div class="row">                                 
                         <!-- mainmenu begin -->
                         <nav  class="navbar" role="navigation" style="margin-bottom: 0">
@@ -59,18 +59,8 @@
 
         <!-- content begin -->
         <div id="content">
-mm
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-dd
-<section id="section-thesis">
-    
-</section>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-ggggooooooooood@!
-ss</br>
-<section id="section-copyright">
-    xs</br></br>x.x.x.
-</section>
+
+
 </div>
 
           
