--- a/src/main/resources/templates/ReportStatistics.html
+++ b/src/main/resources/templates/ReportStatistics.html
@@ -30,7 +30,7 @@
     <div id="wrapper">
         <!-- header begin -->
      
-            <header  class="">
+            <header  class="smaller">
                 <div class="row">                                 
                         <!-- mainmenu begin -->
                         <nav  class="navbar" role="navigation" style="margin-bottom: 0">
