--- a/src/main/resources/templates/Management.html
+++ b/src/main/resources/templates/Management.html
@@ -70,7 +70,7 @@
 
     <!-- Javascript Files
     ================================================== -->
-    <script src="..static/js/jquery.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   
   
