--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,17 +17,19 @@
     <!-- CSS Files
     ================================================== -->
     <link rel="stylesheet" href="../static/css/bootstrap.css" type="text/css">
+
     <link rel="stylesheet" href="../static/css/style.css" type="text/css">
     <!-- color scheme -->
     <link rel="stylesheet" href="../static/css/color.css" type="text/css">
     <!-- revolution slider -->
     <link rel="stylesheet" href="../static/css/rev-settings.css" type="text/css">
+     <link rel="stylesheet" href="../static/css/login.css" type="text/css">
 
 </head>
 
 <body id="homepage" style="overflow:hidden">
 
-    <div id="wrapper">
+<div id="wrapper">
         <!-- header begin -->
      
             <header  class="smaller">
@@ -37,50 +39,98 @@
                             <ul id="mainmenu" class="navbar-left" >
                                 <li><a class="J_menuItem black" href="index.html">Home</a></li>
                                  <li><a class="J_menuItem" href="MyThesis.html">My Thesis</a></li>
-            <li><a class="J_menuItem" href="MySoftwareCopyright.html">My Software Copyright</a></li>
-            <li><a class="J_menuItem" href="MyProject.html">My Project</a></li>
-            <li><a class="J_menuItem" href="Management.html">Management</a></li>
-            <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
-            <li><a class="J_menuItem" >谢文仲</a></li> 
-            <li><a class="J_menuItem" href="login.html">退出</a></li> 
-             
+                                  <li><a class="J_menuItem" href="MySoftwareCopyright.html">My Software Copyright</a></li>
+                                   <li><a class="J_menuItem" href="MyProject.html">My Project</a></li>
+                                   <li><a class="J_menuItem" href="Management.html">Management</a></li>
+                                  <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
+                                 <li><a class="J_menuItem" >谢文仲</a></li> 
+                                 <li><a class="J_menuItem" href="login.html">退出</a></li>           
                             </ul>
-                        </nav>
-
-                
+                        </nav>             
                     <!-- mainmenu close -->
-
                 </div>
-
-     </header>
+      </header>
     
         <!-- header close -->
 
 
         <!-- content begin -->
-        <div id="content">
-mm
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-dd
-<section id="section-thesis">
-    
-</section>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-ggggooooooooood@!
-ss</br>
-<section id="section-copyright">
-    xs</br></br>x.x.x.
-</section>
-</div>
+     <div id="content">
+
+     <section id="section-thesis">
+    <br/>
+        <h1 class="h1fw">论文查询</h1>
+            <br/>
+       <div class="row">
+          <div class="col-md-6  col-md-offset-3">
+
+         <div class="input-group">
+
+          <div class="input-group-btn">
+              
+             <select class="selectpicker show-tick fontsize20 select2"   data-live-search="true">
+               <option>论文ID</option>
+               <option>标题</option>
+               <option>作者一</option>
+               <option>作者二</option>
+               <option>作者三</option>
+                  <option>刊名</option>             
+              </select>
+           </div>
+                               
+            <input type="text" class="form-control searchtext ">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default  fontsize20 menu3 " type="button">查询</button>
+                    </span>
+           </div>    
+            </div><!-- /input-group -->
+            <!-- /.col-md-6 -->
+       </div> 
+
+
+
+
+
+     </section>
+
+     <section id="section-copyright">
+         <h1 class="h1fw">软件著作查询</h1>
+         <br>
+   <div class="row">
+          <div class="col-md-6  col-md-offset-3">
+
+         <div class="input-group">
+
+          <div class="input-group-btn">
+              
+            <select class="selectpicker show-tick fontsize20 select2"   data-live-search="true">
+                <option>软件著作ID</option>
+               <option>著作名称</option>
+               <option>作者一</option>
+               <option>作者二</option>
+               <option>作者三</option>                   
+              </select>
+           </div>
+                               
+            <input type="text" class="form-control searchtext ">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default  fontsize20 menu3" type="button">查询</button>
+                    </span>
+           </div>    
+            </div><!-- /input-group -->
+            <!-- /.col-md-6 -->
+       </div>  
+     </section>
+     </div>
 
           
-        </div>
-    </div>
+     
+</div>
 
 
     <!-- Javascript Files
     ================================================== -->
-    <script src="..static/js/jquery.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   
   
