--- a/src/main/resources/templates/MySoftwareCopyright.html
+++ b/src/main/resources/templates/MySoftwareCopyright.html
@@ -30,7 +30,7 @@
     <div id="wrapper">
         <!-- header begin -->
      
-            <header  class="">
+            <header  class="smaller">
                 <div class="row">                                 
                         <!-- mainmenu begin -->
                         <nav  class="navbar" role="navigation" style="margin-bottom: 0">
@@ -80,7 +80,7 @@ ss</br>
 
     <!-- Javascript Files
     ================================================== -->
-    <script src="..static/js/jquery.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   
   
