--- a/src/main/resources/templates/MyThesis.html
+++ b/src/main/resources/templates/MyThesis.html
@@ -80,7 +80,7 @@ ss</br>
 
     <!-- Javascript Files
     ================================================== -->
-    <script src="..static/js/jquery.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
   
   
