--- a/src/main/resources/templates/subjectManagement.html
+++ b/src/main/resources/templates/subjectManagement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.w3.org/1999/xhtml" lang="zh_CN">
 <head>
     <meta charset="UTF-8">
     <title>项目管理</title>
