--- a/src/main/resources/templates/ReportStatistics.html
+++ b/src/main/resources/templates/ReportStatistics.html
@@ -38,7 +38,7 @@
                                 <li><a class="J_menuItem black" th:href="@{index}">Home</a></li>
                                 <li><a class="J_menuItem" th:href="@{MyThesis}">My Thesis</a></li>
                                 <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
-            <li><a class="J_menuItem" href="MyProject.html">My Project</a></li>
+            <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
             <li><a class="J_menuItem" href="Management.html">Management</a></li>
             <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
             <li><a class="J_menuItem" >谢文仲</a></li> 
