--- a/src/main/resources/templates/ThesisListResult.html
+++ b/src/main/resources/templates/ThesisListResult.html
@@ -39,7 +39,7 @@
                                 <li><a class="J_menuItem black" th:href="@{index}">Home</a></li>
                                 <li><a class="J_menuItem" th:href="@{MyThesis}">My Thesis</a></li>
                                 <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
-            <li><a class="J_menuItem" href="MyProject.html">My Project</a></li>
+            <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
             <li><a class="J_menuItem" href="Management.html">Management</a></li>
             <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
             <li><a class="J_menuItem" >谢文仲</a></li> 
@@ -60,18 +60,27 @@
 
         <!-- content begin -->
         <div id="content">
-mm
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-dd
-<section id="section-thesis">
-    
-</section>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-ggggooooooooood@!
-ss</br>
-<section id="section-copyright">
-    xs</br></br>x.x.x.
-</section>
+            <table data-toggle="table">
+                <thead>
+                <tr>
+                    <th>Item ID</th>
+                    <th>Item Name</th>
+                    <th>Item Price</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Item 1</td>
+                    <td>$1</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Item 2</td>
+                    <td>$2</td>
+                </tr>
+                </tbody>
+            </table>
 </div>
 
           
