配置shrio，登录成功

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                                    <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
                                    <li><a class="J_menuItem" href="Management.html">Management</a></li>
                                   <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
-                                 <li><a class="J_menuItem" >谢文仲</a></li> 
+                                 <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
                                  <li><a class="J_menuItem" th:href="@{login}">退出</a></li>
                             </ul>
                         </nav>             
