--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@
 <div class="signinpanel" style="display: none;" id="login1">
     <div class="row">
         <div class="col-sm-12 ">
-            <form method="post"  th:action="@{/index}"  id="frm">
+            <form method="post"  th:action="@{/login}"  id="frm">
                 <h1 style="text-align: center"> 科 研 档 案 管 理 系 统</h1>
                 <input type="text" class="form-control uname" name="userId" id="userId" placeholder="用户ID" />
                 <input type="password" class="form-control pword m-b" name="passwd" id="password"  placeholder="密码" />
